# pymini

./: .gitignore  LICENSE  README.md  pyminier.py  pyproject.toml  pytest.ini  ugli.py
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark_speed.py  plot.py  plot_summary_svg.py
examples/: pyminifier.py  pyminify.py  pyminify.pymini.py
pymini/: __init__.py  cli.py  pymini.py  utils.py
scripts/: regenerate_examples.py
tests/: README.md  ours.py  pyminifier.py  pyminify.py  test.py  test_api.py  test_cli.py  test_doctest.py  test_examples.py  test_reduction.py
tests/examples/: pyminifier.pymini.py  pyminify.py  pyminify.pymini.py
uglipy/: cli.py  ugli.py  utils.py
