[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uglipy"
version = "0.1.0"
authors = [
  { name="Alvin Wan", email="hi@alvinwan.com" },
]
description = "Simplify, minify, and obfuscate python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools.packages.find]
include = ["uglipy"]

[project.scripts]
uglipy = "uglipy.cli:main"

[project.urls]
"Homepage" = "https://github.com/alvinwan/uglipy"
"Bug Tracker" = "https://github.com/alvinwan/uglipy/issues"