[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymini"
version = "0.1.1"
authors = [
  { name="Alvin Wan", email="hi@alvinwan.com" },
]
description = "Minify python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools.packages.find]
include = ["pymini"]

[project.scripts]
pymini = "pymini.cli:main"

[project.urls]
"Homepage" = "https://github.com/alvinwan/pymini"
"Bug Tracker" = "https://github.com/alvinwan/pymini/issues"